# enjarify-adapter

./: .gitignore  README.md  pyproject.toml  setup.py
enjarify/: __init__.py  main.py
